fix: fix footer for mobile

--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@
   </main>
 
   <!-- TOP FOOTER -->
-  <section class="top__footer">
+  <!-- <section class="top__footer">
     <div class="top__content">
       <h2 class="title__banner">Pesan sekarang dan dapatkan pelayanan terbaik!</h2>
       <p class="desc__banner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis perferendis atque ea officia. Explicabo, laudantium laboriosam praesentium pariatur nisi rem nostrum aliquam reprehenderit tenetur quas. Dicta magni nulla maxime amet!</p>
       <a href="" class="order__btn">Pesan Sekarang</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- FOOTER AREA -->
   <footer>
