--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="item">
         <img title="Cipta Grafika Slide 1" src="./assets/img/img1.jpg" alt="Produk Cipta Grafika" width="400">
         <div class="content">
-          <div class="author">LUNDEV</div>
+          <div class="author">Zen</div>
           <div class="title">DESIGN SLIDER</div>
           <div class="topic">Digital Printing</div>
           <div class="des">
@@ -73,7 +73,7 @@
       <div class="item">
         <img title="Cipta Grafika Slide 2" src="./assets/img/img2.jpg" alt="Produk Cipta Grafika" width="400">
         <div class="content">
-          <div class="author">LUNDEV</div>
+          <div class="author">Zen</div>
           <div class="title">DESIGN SLIDER</div>
           <div class="topic">ANIMAL</div>
           <div class="des">
@@ -88,7 +88,7 @@
       <div class="item">
         <img title="Cipta Grafika Slide 3" src="./assets/img/img3.jpg" alt="Produk Cipta Grafika" width="400">
         <div class="content">
-          <div class="author">LUNDEV</div>
+          <div class="author">Zen</div>
           <div class="title">DESIGN SLIDER</div>
           <div class="topic">ANIMAL</div>
           <div class="des">
@@ -103,7 +103,7 @@
       <div class="item">
         <img src="./assets/img/img4.jpg">
         <div class="content">
-          <div class="author">LUNDEV</div>
+          <div class="author">Zen</div>
           <div class="title">DESIGN SLIDER</div>
           <div class="topic">ANIMAL</div>
           <div class="des">
