chores: modified author name for test

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="item">
         <img title="Cipta Grafika Slide 1" src="./assets/img/img1.jpg" alt="Produk Cipta Grafika" width="400">
         <div class="content">
-          <div class="author">Zen</div>
+          <div class="author">ZEN</div>
           <div class="title">DESIGN SLIDER</div>
           <div class="topic">Digital Printing</div>
           <div class="des">
@@ -73,7 +73,7 @@
       <div class="item">
         <img title="Cipta Grafika Slide 2" src="./assets/img/img2.jpg" alt="Produk Cipta Grafika" width="400">
         <div class="content">
-          <div class="author">Zen</div>
+          <div class="author">ZEN</div>
           <div class="title">DESIGN SLIDER</div>
           <div class="topic">ANIMAL</div>
           <div class="des">
@@ -88,7 +88,7 @@
       <div class="item">
         <img title="Cipta Grafika Slide 3" src="./assets/img/img3.jpg" alt="Produk Cipta Grafika" width="400">
         <div class="content">
-          <div class="author">Zen</div>
+          <div class="author">ZEN</div>
           <div class="title">DESIGN SLIDER</div>
           <div class="topic">ANIMAL</div>
           <div class="des">
@@ -103,7 +103,7 @@
       <div class="item">
         <img src="./assets/img/img4.jpg">
         <div class="content">
-          <div class="author">Zen</div>
+          <div class="author">ZEN</div>
           <div class="title">DESIGN SLIDER</div>
           <div class="topic">ANIMAL</div>
           <div class="des">
@@ -382,7 +382,7 @@
         <div class="testimonial">
           <i class="fas fa-quote-left quote"></i>
           <img title="Cipta Grafika Testimonials" src="./assets/img/img1.jpg" alt="Client Image" width="80">
-          <h3 class="name__clients">Zen</h3>
+          <h3 class="name__clients">ZEN</h3>
           <span class="role__clients">Kodetopia Indonesia</span>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Provident tempor architecto asperiores nobis...</p>
         </div>
